deployMiniApp/clusterip-miniapp-service.yml
apiVersion: v1
kind: Pod
metadata:
  name: miniapp-claster-pod
  labels:
    app: miniapp-claster-pod
    env: dev
spec:
  containers:
    - name: miniapp-claster
      image: temaotl/miniapp:1.0.1
      ports:
      - name: http
        containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: miniapp-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: miniapp-claster-pod
  ports:
  - name: http
    port: 80
    targetPort: http
