deployMiniApp/miniapp-deployment-with-service.yml

apiVersion: apps/v1
kind: Deployment
metadata:
    name: miniapp-deployment
    labels:
        app: miniapp
        version: v1
spec:
    replicas: 3
    revisionHistoryLimit: 10
    selector:
        matchLabels:
            app: miniapp
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 1
    template:
        metadata:
            labels:
                app: miniapp
                version: v1
        spec:
            containers:
            - name: miniapp
              image: temaotl/miniapp:1.0.1
              ports:
              - name: http
                containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: miniapp-service
spec:
  type: ClusterIP
  selector:
    app: miniapp
  ports:
  - name: http
    port: 80
    targetPort: http
