deployMiniApp/miniapp-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: miniapp-ingress
spec:
  rules:
    - host: miniapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: miniapp-service
                port:
                  number: 80
